message LoginReq {
//账号
required string AccountId = 1;
//皮肤
required int32 ThemeType = 2;
}

message LoginRes {
//账号
required int32 RoomId = 1;
//房间宽
required float RoomW = 2;
//房间高
required float RoomH = 3;
//玩家出生位置X
required float StartX = 4;
//玩家出生位置Y
required float StartY = 5;
}